# luanti_fork

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  minetest.conf.example  vcpkg.json
.github/workflows/: android.yml  build.yml  cpp_lint.yml  docker.yml  linux.yml  lua.yml  lua_api_deploy.yml  macos.yml  whitespace_checks.yml  windows.yml
android/: build-glew.sh  build_glew.sh
android/native/: build.gradle
builtin/: init.lua  settingtypes.txt
builtin/client/: chatcommands.lua  init.lua  mods_gui.lua
builtin/common/: chatcommands.lua  menu.lua
builtin/fstk/: tabview.lua
builtin/game/: chat.lua  help_privs.lua  init.lua  misc_s.lua  privileges.lua  register.lua
builtin/mainmenu/: dlg_config_world.lua  dlg_rename_modpack.lua  (+2 more)
doc/: client_lua_api.md  lua_api.md  lua_api.txt  menu_lua_api.md  plans.md
lib/zipextractor/: CMakeLists.txt  byteswap.h  extractZip.cpp  extractZip.h  zipStructs.h
src/: CMakeLists.txt  activeobject.h  activeobjectmgr.h  chat.cpp  chat.h  chat_interface.h  clientdynamicinfo.cpp  clientdynamicinfo.h  collision.cpp  collision.h  constants.h  craftdef.cpp  craftdef.h  defaultsettings.cpp  dummygamedef.h  emerge.cpp  emerge.h  environment.cpp  environment.h  face_position_cache.h  file.cpp  file.h  filesys.cpp  filesys.h  gamedef.h  gameparams.h  hud.h  inventory.h  inventorymanager.h  irr_aabb3d.h  irr_gui_ptr.h  irr_v2d.h  irr_v3d.h  irrlichttypes.h  irrlichttypes_bloated.h  irrlichttypes_extrabloated.h  itemdef.cpp  itemdef.h  light.h  lighting.h  (+61 more)
util/: test_multiplayer.sh
(+922 files in other folders)
